--- a/FlavourFlow/Components/Layout/NavMenu.razor
+++ b/FlavourFlow/Components/Layout/NavMenu.razor
@@ -1,30 +1,60 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">FlavourFlow</a>
+﻿@using Microsoft.AspNetCore.Components.Authorization
+
+<div class="nav-container">
+    <div class="brand-section">
+        <a class="navbar-brand" href="">
+            <span class="logo-icon">🍊</span>
+            <span class="logo-text">FlavourFlow</span>
+        </a>
     </div>
-</div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+    <nav class="nav-links">
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
+        <div class="nav-group">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="icon">🏠</span> <span class="text">Home</span>
+            </NavLink>
+            <NavLink class="nav-link" href="explore">
+                <span class="icon">🔍</span> <span class="text">Explore</span>
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
+        <div class="nav-separator"></div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
+        <AuthorizeView>
+            <Authorized>
+                <div class="nav-group">
+                    <span class="group-label">Chef's Corner</span>
+                    <NavLink class="nav-link" href="add-recipe">
+                        <span class="icon">🍳</span> <span class="text">Share Recipe</span>
+                    </NavLink>
+                    <NavLink class="nav-link" href="profile">
+                        <span class="icon">👨‍🍳</span> <span class="text">My Kitchen</span>
+                    </NavLink>
+                    <NavLink class="nav-link" href="Account/Manage">
+                        <span class="icon">⚙️</span> <span class="text">Settings</span>
+                    </NavLink>
+                </div>
+
+                <div class="nav-separator"></div>
+
+                <div class="nav-group bottom-group">
+                    <NavLink class="nav-link logout-link" href="logout">
+                        <span class="icon">🚪</span> <span class="text">Log Out</span>
+                    </NavLink>
+                </div>
+            </Authorized>
+            <NotAuthorized>
+                <div class="nav-group">
+                    <span class="group-label">Account</span>
+                    <NavLink class="nav-link" href="Account/Login">
+                        <span class="icon">🔐</span> <span class="text">Log In</span>
+                    </NavLink>
+                    <NavLink class="nav-link" href="Account/Register">
+                        <span class="icon">✨</span> <span class="text">Join Us</span>
+                    </NavLink>
+                </div>
+            </NotAuthorized>
+        </AuthorizeView>
     </nav>
 </div>
-
